[gd_scene load_steps=3 format=3 uid="uid://6u4cepm1n6cr"]

[ext_resource type="Texture2D" uid="uid://cayaens4ptupd" path="res://assets/black.jpg" id="1_gb2ri"]
[ext_resource type="Script" uid="uid://tx3qlixpskwv" path="res://scripts/salvar_highscore.gd" id="1_ud5j0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ud5j0")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.690196)
position = Vector2(576, 312)
texture = ExtResource("1_gb2ri")

[node name="Titulo" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 336.0
offset_top = 32.0
offset_right = 770.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Salvando sua pontuação!"
horizontal_alignment = 1

[node name="Descricao" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 126.0
offset_top = 106.0
offset_right = 989.0
offset_bottom = 262.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Informe seu nome e sua escola para enviarmos um prêmio caso sua pontuação for a maior entre todos os que participarem aqui no Mundo Senai!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LabelNome" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 200.0
offset_top = 296.0
offset_right = 590.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Seu nome:"

[node name="LabelEscola" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 26.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 424.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Nome da sua escola:"
horizontal_alignment = 1

[node name="LabelPontuacao" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 704.0
offset_right = 381.0
offset_bottom = 754.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "000000000"
horizontal_alignment = 1

[node name="Nome" type="TextEdit" parent="."]
offset_left = 394.0
offset_top = 306.0
offset_right = 1094.0
offset_bottom = 346.0

[node name="Escola" type="TextEdit" parent="."]
offset_left = 394.0
offset_top = 380.0
offset_right = 1094.0
offset_bottom = 420.0

[node name="SalvarHighscore" type="Button" parent="."]
offset_left = 408.0
offset_top = 488.0
offset_right = 676.0
offset_bottom = 538.0
theme_override_font_sizes/font_size = 30
text = "Salvar pontuação"

[node name="Cancelar" type="Button" parent="."]
offset_left = 408.0
offset_top = 553.0
offset_right = 676.0
offset_bottom = 603.0
theme_override_font_sizes/font_size = 30
text = "Cancelar (Menu)"

[connection signal="pressed" from="SalvarHighscore" to="." method="_on_salvar_highscore_pressed"]
[connection signal="pressed" from="Cancelar" to="." method="_on_cancelar_pressed"]
